# CGAL-hello-world

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildSettings.cmake
data/: hello-world.ply
src/: cgal_pch.hpp  hello.cpp  view.cpp
